# file-formats-cpp

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
Logs/: .~lock.LogDuckDB1.csv#  .~lock.LogDuckDB3.csv#  .~lock.LogDuckDB5-r.csv#  .~lock.LogDuckDB5.csv#  .~lock.result_table.ods#  LogDuckDB1.csv  LogDuckDB2.csv  LogDuckDB3.csv  LogDuckDB4.csv  LogDuckDB5-r.csv  LogDuckDB5-rand.csv  LogDuckDB5.csv  LogDuckDB6.csv  LogEncode.csv  LogEncodeBig.csv  LogEncodeSmall.csv  LogRead.csv  LogShuffle1M.csv  LogShuffle1k.csv  LogTest1-2-3.csv  LogTest1-2-3_copy.csv  LogTest1-2-3_copy2.csv  LogTestBig1-2-3_copy.csv  result_table.ods
_ArrowParquet/: ArrowDataWriter.h  careate_write_iterative.h  example_with_slice.h  include_base_exmpl.h  parquet_test.h
_libs/: settings.h
_libs/Log/: Log.h
_libs/_ArrowParquet/: ArrowDataReader.h  ArrowDataWriter.h  ArrowTest.h  careate_write_iterative.h  create_write_once.h  debug_func.h  example_with_slice.h  parquet_test.h  prqt_settings.h  test.h
_libs/_ArrowParquet/Examples/: careate_write_iterative.h  parquet_test.h
_libs/_ArrowParquet/Tests/: Test1_write.h  Test2_read.h  Test3_randread.h  Test4_shuffle.h  prqt_test.h  test_ns.h
_libs/_DuckDB/: DuckDBReader.h  DuckDBTest.h  DuckDBWriter.h  duckdb_settings.h  example.h
_libs/_DuckDB/Examples/: example.h
_libs/_DuckDB/Tests/: Test1_write.h  Test2_read.h  Test3_randread.h  duckdb_test.h
_libs/_HDF5/: hdf5-test.h
_libs/_Markup/: Markup.h  example.h
_libs/_hdr-bin/: bin.h  hdr.h
scripts/: SavePlots.ipynb  parquet_dump.jl  plots.jl
